--- a/src/app/my-components/all-employees/all-employees.component.html
+++ b/src/app/my-components/all-employees/all-employees.component.html
@@ -38,7 +38,7 @@
               <fa-icon [icon]="edit"></fa-icon>
             </button>
 
-            <button class="action-btn">
+            <button class="action-btn" (click)="deleteemployee(employee.id)">
               <fa-icon [icon]="del"></fa-icon>
             </button>
           </p>
