--- a/src/app/my-components/edit-employee/edit-employee.component.html
+++ b/src/app/my-components/edit-employee/edit-employee.component.html
@@ -19,29 +19,14 @@
         <h5>Personal details</h5>
 
         <label for="name">Name</label>
-        <input
-          type="text"
-          name="name"
-          formControlName="name"
-          value="{{ employee?.name }}"
-        />
+        <input type="text" name="name" formControlName="name" />
 
         <label for="birthdate"> Birth-Date </label>
-        <input
-          type="date"
-          name="birthdate"
-          formControlName="birthDate"
-          value="{{ employee?.birthDate }}"
-        />
+        <input type="date" name="birthdate" formControlName="birthDate" />
         <br />
 
         <label for="gender"> Gender </label>
-        <select
-          id="gender"
-          name="gender"
-          formControlName="gender"
-          value="{{ employee?.gender }}"
-        >
+        <select id="gender" name="gender" formControlName="gender">
           <option value="">select</option>
           <option value="male">male</option>
           <option value="female">female</option>
@@ -49,29 +34,14 @@
         </select>
 
         <label for="city"> City </label>
-        <input
-          type="city"
-          name="city"
-          formControlName="city"
-          value="{{ employee?.city }}"
-        />
+        <input type="city" name="city" formControlName="city" />
         <br />
 
         <label for="email"> Email </label>
-        <input
-          type="email"
-          name="email"
-          formControlName="email"
-          value="{{ employee?.email }}"
-        />
+        <input type="email" name="email" formControlName="email" />
 
         <label for="phone"> Phone </label>
-        <input
-          type="tel"
-          name="phone"
-          formControlName="phone"
-          value="{{ employee?.phone }}"
-        />
+        <input type="tel" name="phone" formControlName="phone" />
         <br />
       </div>
 
@@ -80,55 +50,32 @@
         <h5>Work details</h5>
 
         <label for="job title">Job title</label>
-        <input
-          type="text"
-          name="Jobtitle"
-          formControlName="jobTitle"
-          value="{{ employee?.jobTitle }}"
-        />
+        <input type="text" name="Jobtitle" formControlName="jobTitle" />
 
         <label for="Employment-type">Employment Type</label>
         <input
           type="text"
           name="Employment-type"
           formControlName="employmenttype"
-          value="{{ employee?.employmenttype }}"
         />
         <br />
 
         <label for="joining-date">joining-Date</label>
-        <input
-          type="date"
-          name="joining-Date"
-          formControlName="joiningDate"
-          value="{{ employee?.joiningDate }}"
-        />
+        <input type="date" name="joining-Date" formControlName="joiningDate" />
 
         <label for="Contract expiry">Contract Expiry</label>
         <input
           type="date"
           name="contract-expiry"
           formControlName="contractExpiry"
-          value="{{ employee?.contractExpiry }}"
         />
         <br />
 
         <label for="doc">Document</label>
-        <input
-          type="text"
-          name="doc"
-          multiple
-          formControlName="documents"
-          value="{{ employee?.documents }}"
-        />
+        <input type="text" name="doc" multiple formControlName="documents" />
 
         <label for="salary"> salary </label>
-        <input
-          type="amount"
-          name="salary"
-          formControlName="salary"
-          value="{{ employee?.salary }}"
-        />
+        <input type="amount" name="salary" formControlName="salary" />
       </div>
     </div>
   </form>
