--- a/src/app/my-components/all-employees/all-employees.component.html
+++ b/src/app/my-components/all-employees/all-employees.component.html
@@ -46,6 +46,15 @@
       </div>
     </div>
 
+    <ngx-spinner
+      bdColor="rgba(0, 0, 0, 0.8)"
+      size="medium"
+      color="green"
+      [type]="typeselected"
+      [fullScreen]="false"
+      ><p style="color: white">Loading...</p>
+    </ngx-spinner>
+
     <!-- row end -->
   </div>
 
