--- a/src/app/my-components/menu/menu.component.html
+++ b/src/app/my-components/menu/menu.component.html
@@ -1,53 +1,30 @@
-
-
 <div class="menu">
- 
+  <h1>Admin</h1>
 
-    <h1>Admin</h1>
+  <ul>
+    <li routerLinkActive="active">
+      <fa-icon [icon]="home" class="menu-icon fa-lg"></fa-icon>
+      <a routerLink="/dashboard-component">dashbard</a>
+    </li>
 
-    <ul>
+    <li routerLinkActive="active">
+      <fa-icon [icon]="all" class="menu-icon fa-lg"></fa-icon>
+      <a routerLink="/allemployees-component">All-Employees</a>
+    </li>
 
-        <li routerLinkActive="active">
-            <fa-icon [icon]="home" class="menu-icon fa-lg"></fa-icon>
-            <a routerLink="/dashboard-component">dashbard</a>
-        </li>
+    <li routerLinkActive="active">
+      <fa-icon [icon]="add" class="menu-icon fa-lg"></fa-icon>
+      <a routerLink="/addemployee-component">Add-Employee</a>
+    </li>
 
-        <li routerLinkActive="active">
-            <fa-icon [icon]="all" class="menu-icon fa-lg"></fa-icon>
-            <a routerLink="/allemployees-component">All-Employees</a>
-        </li>
-
-        <li routerLinkActive="active">
-            <fa-icon [icon]="add" class="menu-icon fa-lg"></fa-icon>
-            <a routerLink="/addemployee-component">Add-Employee</a>
-        </li>
-
-        <li routerLinkActive="active">
+    <!-- <li routerLinkActive="active">
            <fa-icon [icon]="view" class="menu-icon fa-lg"></fa-icon>
            <a routerLink="/viewemployee-component">View-Employee</a>
-        </li>
+        </li> -->
 
-        <li routerLinkActive="active">
+    <!-- <li routerLinkActive="active">
             <fa-icon [icon]="edit" class="menu-icon fa-lg"></fa-icon>
             <a routerLink="/editemployee-component">Edit-Employee</a>
-        </li>
-
-    </ul>
+        </li> -->
+  </ul>
 </div>
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
