--- a/src/app/my-components/view-employee/view-employee.component.html
+++ b/src/app/my-components/view-employee/view-employee.component.html
@@ -1,8 +1,6 @@
 <div class="view-employee">
   <h3>View-Employee</h3>
-  <a routerLink="/editemployee-component" routerLinkActive="active">
-    <button class="edit">Edit</button>
-  </a>
+  <button class="edit" (click)="editemployee(employeeid)">Edit</button>
 </div>
 
 <hr />
