--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 @import "./variables";
 @import "./mixin";
 
-//components styles 
+//components styles
 @import "./default";
 @import "./menu";
 @import "./dashboard";
@@ -15,8 +15,6 @@
 @import "./view";
 @import "./edit";
 
-
 body {
-    background-color: $whitesmoke;
+  background-color: $whitesmoke;
 }
-
