--- a/src/app/my-components/dashboard/dashboard.component.html
+++ b/src/app/my-components/dashboard/dashboard.component.html
@@ -1,26 +1,17 @@
-
-
 <div class="open-tab">
-    <h3>Dashboard</h3>
-    <input type="search" id="d_search" placeholder="Search Employees">
+  <h3>Dashboard</h3>
+  <input type="search" id="d_search" placeholder="Search Employees" />
 </div>
- <hr> 
-
-
+<hr />
 
 <div class="home">
-  
-    <a routerLink="/allemployees-component" routerLinkActive="active">
-       <fa-icon [icon]="all" class="fa-2x home-icon"></fa-icon>
-       <button class="das-btn"> All Employees </button>
-   </a>
+  <a routerLink="/allemployees-component" routerLinkActive="active">
+    <fa-icon [icon]="all" class="fa-2x home-icon"></fa-icon>
+    <button class="das-btn">All Employees</button>
+  </a>
 
-   <a routerLink="/addemployee-component" routerLinkActive="active">
+  <a routerLink="/addemployee-component" routerLinkActive="active">
     <fa-icon [icon]="add" class="fa-2x home-icon"></fa-icon>
-    <button class="das-btn"> Add Employee </button>
-   </a>  
-
+    <button class="das-btn">Add Employee</button>
+  </a>
 </div>
-
-
-
